refactor: clean some dashboard unused imports

--- a/prime_admin/templates/lms/dashboard.html
+++ b/prime_admin/templates/lms/dashboard.html
@@ -282,7 +282,7 @@
                     <div class="mb-3 card">
                         <div class="card-header-tab card-header-tab-animation card-header">
                             <div class="card-header-title">
-                                Sales Breakdown
+                                Student's Payments Sales Breakdown
                             </div>
                         </div>
                         <div class="card-body">
