feat: ef83ea84d8aa44d09e1cd3c8f54046c3

--- a/prime_admin/templates/lms/earnings/marketer.html
+++ b/prime_admin/templates/lms/earnings/marketer.html
@@ -181,6 +181,7 @@
                             <tr>
                                 <th class="text-center">STUDENT ID</th>
                                 <th class="text-center">PAYMENT ID</th>
+                                <th class="text-center">PAYMENT DATE</th>
                                 <th class="text-center">BRANCH</th>
                                 <th class="text-center">FULL NAME</th>
                                 <th class="text-center">BATCH NO.</th>
